# eveerrormonitor

./: LICENSE  MANIFEST.in  PRODUCTION_STATUS.md  PROJECT_STRUCTURE.md  PYPI_UPLOAD_CHECKLIST.md  README.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  VERSION_SUMMARY_v1.1.0.md  eve_crash_log.json  eve_crash_log_simple.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_monitor_config.json
.github/: dependabot.yml
config/: crash_monitor_config.json
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  FILE_ORGANIZATION_SUMMARY.md  FIXED_SUMMARY.md  LOG_FORMAT_UPDATE.md  POWERSHELL_README.md  PYTHON_README.md  TYPE_FIXES_SUMMARY.md  VIRTUAL_ENVIRONMENT_GUIDE.md
logs/: crash_monitor_config.json  eve_crash_log.json  eve_crash_log.txt  eve_crash_log_simple.txt  simple_monitor_config.json
powershell/: eve_monitor.ps1
python/: crash_monitor_config.json  enhanced_crash_monitor.py  eve_crash_monitor.py  eveloglite_client.py  simple_eve_monitor.py  test_installation.py  test_monitor.py
python/eve_crash_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: final_verification.py  test_installation.py  test_log_exclusion.py  verify_organization.py
scripts/: install.bat  production_check.bat  run_gui.bat  run_monitor.bat  run_monitor_interactive.bat  setup.bat  status.bat
